fixed UI layout issues

--- a/src/Components/Popular/Popular.css
+++ b/src/Components/Popular/Popular.css
@@ -36,7 +36,7 @@
   gap: 20px;
   margin-top: 40px;
   justify-content: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 /* Laptop */
